@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.64">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.65">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
@@ -25,8 +25,8 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.64 [20230412]:
-- Added New Setting "Set Streaming Site"
+Changelog 0.3.65 [20230414]:
+- Handle animix dub stream site being down
     </news>
   </extension>
 </addon>
