@@ -1,3 +1,6 @@
+Changelog 0.3.65 [20230414]:
+- Handle animix dub stream site being down
+
 Changelog 0.3.64 [20230412]:
 - Added New Setting "Set Streaming Site"
 
